Added files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,287 @@
 api-key.env
+__pycache__/options.cpython-39.pyc
+__pycache__/scene_manager.cpython-39.pyc
+.gitignore
+.tmp.driveupload/167702
+.tmp.driveupload/167704
+.tmp.driveupload/167706
+.tmp.driveupload/171218
+.tmp.driveupload/171220
+.tmp.driveupload/171222
+.tmp.driveupload/171224
+.tmp.driveupload/171226
+.tmp.driveupload/171228
+.tmp.driveupload/171230
+.tmp.driveupload/171232
+.tmp.driveupload/171234
+.tmp.driveupload/171236
+.tmp.driveupload/171240
+.tmp.driveupload/171244
+.tmp.driveupload/171246
+.tmp.driveupload/171248
+.tmp.driveupload/171250
+.tmp.driveupload/171938
+.tmp.driveupload/172034
+.tmp.driveupload/172036
+.tmp.driveupload/172038
+.tmp.driveupload/172042
+.tmp.driveupload/172044
+.tmp.driveupload/172046
+.tmp.driveupload/172048
+.tmp.driveupload/172050
+.tmp.driveupload/172052
+.tmp.driveupload/172054
+.tmp.driveupload/172056
+.tmp.driveupload/172058
+.tmp.driveupload/172060
+.tmp.driveupload/172062
+.tmp.driveupload/172066
+.tmp.driveupload/172068
+.tmp.driveupload/172070
+.tmp.driveupload/172074
+.tmp.driveupload/172076
+.tmp.driveupload/172078
+.tmp.driveupload/172080
+.tmp.driveupload/172084
+.tmp.driveupload/172086
+.tmp.driveupload/172090
+.tmp.driveupload/172092
+.tmp.driveupload/172094
+.tmp.driveupload/172096
+.tmp.driveupload/172098
+.tmp.driveupload/172100
+.tmp.driveupload/172102
+.tmp.driveupload/172104
+.tmp.driveupload/172106
+.tmp.driveupload/172108
+.tmp.driveupload/172112
+.tmp.driveupload/172114
+.tmp.driveupload/172116
+.tmp.driveupload/172118
+.tmp.driveupload/172120
+.tmp.driveupload/172122
+.tmp.driveupload/172124
+.tmp.driveupload/172126
+.tmp.driveupload/172128
+.tmp.driveupload/172132
+.tmp.driveupload/172134
+.tmp.driveupload/172136
+.tmp.driveupload/172138
+.tmp.driveupload/172140
+.tmp.driveupload/172142
+.tmp.driveupload/172146
+.tmp.driveupload/172148
+.tmp.driveupload/172150
+.tmp.driveupload/172152
+.tmp.driveupload/172154
+.tmp.driveupload/172156
+.tmp.driveupload/172158
+.tmp.driveupload/172160
+.tmp.driveupload/172162
+.tmp.driveupload/172164
+.tmp.driveupload/172166
+.tmp.driveupload/172168
+.tmp.driveupload/172172
+.tmp.driveupload/172176
+.tmp.driveupload/172178
+.tmp.driveupload/172180
+.tmp.driveupload/172182
+.tmp.driveupload/172184
+.tmp.driveupload/172186
+.tmp.driveupload/172188
+.tmp.driveupload/172192
+.tmp.driveupload/172194
+.tmp.driveupload/172196
+.tmp.driveupload/172198
+.tmp.driveupload/172200
+.tmp.driveupload/172202
+.tmp.driveupload/172204
+.tmp.driveupload/172206
+.tmp.driveupload/172208
+.tmp.driveupload/172210
+.tmp.driveupload/172212
+.tmp.driveupload/172214
+.tmp.driveupload/172216
+.tmp.driveupload/172218
+.tmp.driveupload/172222
+.tmp.driveupload/172224
+.tmp.driveupload/172226
+.tmp.driveupload/172228
+.tmp.driveupload/172230
+.tmp.driveupload/172232
+.tmp.driveupload/172234
+.tmp.driveupload/172236
+.tmp.driveupload/172238
+.tmp.driveupload/172242
+.tmp.driveupload/172244
+.tmp.driveupload/172246
+.tmp.driveupload/172248
+.tmp.driveupload/172250
+.tmp.driveupload/172252
+.tmp.driveupload/172254
+.tmp.driveupload/172256
+.tmp.driveupload/172260
+.tmp.driveupload/172264
+.tmp.driveupload/172266
+.tmp.driveupload/172268
+.tmp.driveupload/172270
+.tmp.driveupload/172274
+.tmp.driveupload/172276
+.tmp.driveupload/172278
+.tmp.driveupload/172280
+.tmp.driveupload/172282
+.tmp.driveupload/172284
+.tmp.driveupload/172286
+.tmp.driveupload/172288
+.tmp.driveupload/172290
+.tmp.driveupload/172292
+.tmp.driveupload/172294
+.tmp.driveupload/172296
+.tmp.driveupload/172298
+.tmp.driveupload/172300
+.tmp.driveupload/172302
+.tmp.driveupload/172304
+.tmp.driveupload/172306
+.tmp.driveupload/172308
+.tmp.driveupload/172312
+.tmp.driveupload/172314
+.tmp.driveupload/172316
+.tmp.driveupload/172318
+.tmp.driveupload/172320
+.tmp.driveupload/172322
+.tmp.driveupload/172324
+.tmp.driveupload/172326
+.tmp.driveupload/172328
+.tmp.driveupload/172332
+.tmp.driveupload/172334
+.tmp.driveupload/172336
+.tmp.driveupload/172338
+.tmp.driveupload/172340
+.tmp.driveupload/172342
+.tmp.driveupload/172344
+.tmp.driveupload/172348
+.tmp.driveupload/172350
+.tmp.driveupload/172352
+.tmp.driveupload/172354
+.tmp.driveupload/172356
+.tmp.driveupload/172358
+.tmp.driveupload/172362
+.tmp.driveupload/172364
+.tmp.driveupload/172366
+.tmp.driveupload/172368
+.tmp.driveupload/172370
+.tmp.driveupload/172372
+.tmp.driveupload/172374
+.tmp.driveupload/172376
+.tmp.driveupload/172378
+.tmp.driveupload/172380
+.tmp.driveupload/172382
+.tmp.driveupload/172384
+.tmp.driveupload/172386
+.tmp.driveupload/172388
+.tmp.driveupload/172390
+.tmp.driveupload/172392
+.tmp.driveupload/172394
+.tmp.driveupload/172396
+.tmp.driveupload/172398
+.tmp.driveupload/172400
+.tmp.driveupload/172402
+.tmp.driveupload/172404
+.tmp.driveupload/172406
+.tmp.driveupload/172408
+.tmp.driveupload/172410
+.tmp.driveupload/172412
+.tmp.driveupload/172414
+.tmp.driveupload/172416
+.tmp.driveupload/172418
+.tmp.driveupload/172420
+.tmp.driveupload/172422
+.tmp.driveupload/172424
+.tmp.driveupload/172426
+.tmp.driveupload/172428
+.tmp.driveupload/172430
+.tmp.driveupload/172432
+.tmp.driveupload/172436
+.tmp.driveupload/172438
+.tmp.driveupload/172440
+.tmp.driveupload/172442
+.tmp.driveupload/172444
+.tmp.driveupload/172446
+.tmp.driveupload/172448
+.tmp.driveupload/172450
+.tmp.driveupload/172452
+.tmp.driveupload/172454
+.tmp.driveupload/172456
+.tmp.driveupload/172458
+.tmp.driveupload/172460
+.tmp.driveupload/172462
+.tmp.driveupload/172464
+.tmp.driveupload/172468
+.tmp.driveupload/172470
+.tmp.driveupload/172472
+.tmp.driveupload/172474
+.tmp.driveupload/172476
+.tmp.driveupload/172478
+.tmp.driveupload/172480
+.tmp.driveupload/172482
+.tmp.driveupload/172484
+.tmp.driveupload/172486
+.tmp.driveupload/172488
+.tmp.driveupload/172490
+.tmp.driveupload/172492
+.tmp.driveupload/172494
+.tmp.driveupload/172496
+.tmp.driveupload/172498
+.tmp.driveupload/172502
+.tmp.driveupload/172506
+.tmp.driveupload/172508
+.tmp.driveupload/172510
+.tmp.driveupload/172512
+.tmp.driveupload/172514
+.tmp.driveupload/172516
+.tmp.driveupload/172518
+.tmp.driveupload/172520
+.tmp.driveupload/172522
+.tmp.driveupload/172524
+.tmp.driveupload/172526
+.tmp.driveupload/172530
+.tmp.driveupload/172532
+.tmp.driveupload/172534
+.tmp.driveupload/172536
+.tmp.driveupload/172538
+.tmp.driveupload/172540
+.tmp.driveupload/172542
+.tmp.driveupload/172544
+.tmp.driveupload/172546
+.tmp.driveupload/172548
+.tmp.driveupload/172550
+.tmp.driveupload/172552
+.tmp.driveupload/172554
+.tmp.driveupload/172556
+.tmp.driveupload/172558
+.tmp.driveupload/172560
+.tmp.driveupload/172562
+.tmp.driveupload/172564
+.tmp.driveupload/172566
+.tmp.driveupload/172568
+.tmp.driveupload/172570
+.tmp.driveupload/172572
+.tmp.driveupload/172574
+.tmp.driveupload/172576
+.tmp.driveupload/172580
+.tmp.driveupload/172582
+.tmp.driveupload/172584
+.tmp.driveupload/172588
+.tmp.driveupload/172590
+.tmp.driveupload/172594
+.tmp.driveupload/172596
+.tmp.driveupload/172598
+.tmp.driveupload/172600
+.tmp.driveupload/172602
+.tmp.driveupload/172604
+.tmp.driveupload/172606
+.tmp.driveupload/172608
+.tmp.driveupload/172610
+.tmp.driveupload/172614
+.tmp.driveupload/172616
+.tmp.driveupload/172618
